
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,...) ;

void hexDump (char *desc, void *addr, int len) {
    int i;
    unsigned char buff[17];
    unsigned char *pc = (unsigned char*)addr;


    if (desc != ((void*)0))
        printf ("%s:\n", desc);

    if (len == 0) {
        printf("  ZERO LENGTH\n");
        return;
    }
    if (len < 0) {
        printf("  NEGATIVE LENGTH: %i\n",len);
        return;
    }


    for (i = 0; i < len; i++) {


        if ((i % 16) == 0) {

            if (i != 0)
                printf ("  %s\n", buff);


            printf ("  %04x ", i);
        }


        printf (" %02x", pc[i]);


        if ((pc[i] < 0x20) || (pc[i] > 0x7e))
            buff[i % 16] = '.';
        else
            buff[i % 16] = pc[i];
        buff[(i % 16) + 1] = '\0';
    }


    while ((i % 16) != 0) {
        printf ("   ");
        i++;
    }


    printf ("  %s\n", buff);
}
